--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   api:
-    image: linkextractor-api:step4-python
+    image: study4
     build: ./api
     ports:
       - "5000:5000"
